objects/Sales_Plan__c/Sales_Plan__c.object-meta.xml
<CustomObject>
    <description>custom object to track Sales Plan for Xactly Incent</description>
    <label>Sales Plan</label>
    <nameField>
        <displayFormat>SP-{000000000}</displayFormat>
        <label>Sales Plan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>