objects/Sales_Plan__c/fields/ADP_ID__c.field-meta.xml
<CustomField>
    <fullName>ADP_ID__c</fullName>
    <description>Used in Xactly/SFDC integration. Populated by Boomi integration with SuccessFactor.</description>
    <inlineHelpText>This field is populated from SuccessFactor by Boomi. This is not a user updated field.</inlineHelpText>
    <label>DEPRECATED - ADP ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>