objects/Sales_Plan__c/fields/ADP_Position__c.field-meta.xml
<CustomField>
    <fullName>ADP_Position__c</fullName>
    <description>INC0121527 Alexis Nazario</description>
    <inlineHelpText>This field is populated from SuccessFactor by Boomi. This is not a user updated field.</inlineHelpText>
    <label>DEPRECATED - ADP Position</label>
    <length>20</length>
    <type>Text</type>
</CustomField>