objects/Sales_Plan__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Used for Xactly/SFDC integration. For Sales Ops to enter comments.</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>