objects/Sales_Plan__c/fields/Current_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Fiscal_Year__c</fullName>
    <formula>&quot;FY&quot; + IF(MONTH(TODAY())=1,RIGHT(TEXT(YEAR(TODAY())),2),RIGHT(TEXT(YEAR(TODAY())+1),2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Fiscal Year</label>
    <type>Text</type>
</CustomField>