objects/Sales_Plan__c/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <formula>Sales_User__r.Tanium_Employee_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Id</label>
    <type>Text</type>
</CustomField>