objects/Sales_Plan__c/fields/Employee_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID_Text__c</fullName>
    <description>Create for Boomi Integration to have en editable Employee ID Field
Editable by &quot;API Only Integration Admin&quot;
Used in Xactly/SFDC integration.</description>
    <externalId>true</externalId>
    <inlineHelpText>This field is populated from SuccessFactor by Boomi. This is not a user updated field.</inlineHelpText>
    <label>Employee ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>