objects/Sales_Plan__c/fields/Global_Accounts_OTV__c.field-meta.xml
<CustomField>
    <fullName>Global_Accounts_OTV__c</fullName>
    <description>INC0122191</description>
    <label>DEPRECATED - Global Accounts OTV</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>