objects/Sales_Plan__c/fields/Global_Accounts_OTV_Currency__c.field-meta.xml
<CustomField>
    <fullName>Global_Accounts_OTV_Currency__c</fullName>
    <defaultValue>(&quot;USD&quot;)</defaultValue>
    <description>INC0122191</description>
    <label>DEPRECATED - Global Account OTV Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies_Xactly</valueSetName>
    </valueSet>
</CustomField>