objects/Sales_Plan__c/fields/Global_Accounts_Quota__c.field-meta.xml
<CustomField>
    <fullName>Global_Accounts_Quota__c</fullName>
    <description>INC0122191</description>
    <label>DEPRECATED - Global Accounts Quota</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>