objects/Sales_Plan__c/fields/Has_Direct_Reports__c.field-meta.xml
<CustomField>
    <fullName>Has_Direct_Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has Direct Reports</description>
    <inlineHelpText>Has Direct Reports</inlineHelpText>
    <label>Has Direct Reports</label>
    <type>Checkbox</type>
</CustomField>