objects/Sales_Plan__c/fields/L2_Territory__c.field-meta.xml
<CustomField>
    <fullName>L2_Territory__c</fullName>
    <label>L2 Territory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>