objects/Sales_Plan__c/fields/L3_Territory__c.field-meta.xml
<CustomField>
    <fullName>L3_Territory__c</fullName>
    <label>L3 Territory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>