objects/Sales_Plan__c/fields/L5_Territory__c.field-meta.xml
<CustomField>
    <fullName>L5_Territory__c</fullName>
    <label>L5 Territory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>