objects/Sales_Plan__c/fields/Latest_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Processed_Date__c</fullName>
    <description>Used for Xactly/SFDC integration.</description>
    <label>Latest Processed Date</label>
    <type>Date</type>
</CustomField>