objects/Sales_Plan__c/fields/Latest_Version_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Version_Date__c</fullName>
    <description>Used for Xactly/SFDC integration.
INC0126668 Nada Akl Label change</description>
    <label>Xactly Latest Version Date</label>
    <type>Date</type>
</CustomField>