objects/Sales_Plan__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <description>INC0121527 Alexis Nazario</description>
    <inlineHelpText>This field is populated from SuccessFactor by Boomi. This is not a user updated field.</inlineHelpText>
    <label>Legal Entity</label>
    <length>60</length>
    <type>Text</type>
</CustomField>