objects/Sales_Plan__c/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <description>Used in Xactly/SFDC integration.</description>
    <formula>Sales_User__r.Manager.Full_Name__c</formula>
    <label>Manager Name</label>
    <type>Text</type>
</CustomField>