objects/Sales_Plan__c/fields/Month_3_Ramp_Requirements_Met__c.field-meta.xml
<CustomField>
    <fullName>Month_3_Ramp_Requirements_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SS-12416 - Indicate whether the Sales person has met the requirements for their first, second and third month compensation ramps.</description>
    <label>Month 3 Ramp Requirements Met</label>
    <type>Checkbox</type>
</CustomField>