objects/Sales_Plan__c/fields/Non_Commission_Eligible_Date__c.field-meta.xml
<CustomField>
    <fullName>Non_Commission_Eligible_Date__c</fullName>
    <description>INC0198422
To be checked by Boomi
Temporarily hidden for all profiles and not on page layouts. Once boomi is done testing this can be made visible.</description>
    <label>Non-Commission Eligible Date</label>
    <type>Date</type>
</CustomField>