objects/Sales_Plan__c/fields/OTV_1__c.field-meta.xml
<CustomField>
    <fullName>OTV_1__c</fullName>
    <description>Used in SFDC/xactly integration. Populated by Boomi from SuccessFactor.</description>
    <inlineHelpText>This field is populated from SuccessFactor by Boomi. This is not a user updated field.</inlineHelpText>
    <label>Total OTV</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>