objects/Sales_Plan__c/fields/OTV_1_Currency__c.field-meta.xml
<CustomField>
    <fullName>OTV_1_Currency__c</fullName>
    <description>Used in Xactly/SFDC integration. Populated by Boomi from SuccessFactor.</description>
    <inlineHelpText>This field is populated from SuccessFactor by Boomi. This is not a user updated field.</inlineHelpText>
    <label>Total OTV Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies_Xactly</valueSetName>
    </valueSet>
</CustomField>