objects/Sales_Plan__c/fields/OTV_2__c.field-meta.xml
<CustomField>
    <fullName>OTV_2__c</fullName>
    <description>Used in Xactly/SFDC integration.</description>
    <label>DEPRECATED - NACV OTV</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>