objects/Sales_Plan__c/fields/OTV_2_Currency__c.field-meta.xml
<CustomField>
    <fullName>OTV_2_Currency__c</fullName>
    <defaultValue>(&quot;USD&quot;)</defaultValue>
    <description>Used in Xactly/SFDC integration. Populated by Sales Ops. Default value set to USD.</description>
    <label>DEPRECATED - Primary OTV Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currencies_Xactly</valueSetName>
    </valueSet>
</CustomField>