objects/Sales_Plan__c/fields/OTV_3__c.field-meta.xml
<CustomField>
    <fullName>OTV_3__c</fullName>
    <description>INC0122191 Label change</description>
    <inlineHelpText>Secondary OTV</inlineHelpText>
    <label>DEPRECATED - Renewal OTV</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>