objects/Sales_Plan__c/fields/Prorated_OTV_1__c.field-meta.xml
<CustomField>
    <fullName>Prorated_OTV_1__c</fullName>
    <description>Used in Xactly/SFDC integration.</description>
    <label>DEPRECATED - Prorated Total OTV</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>