objects/Sales_Plan__c/fields/Ready_to_Submit__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Submit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Submit</label>
    <type>Checkbox</type>
</CustomField>