objects/Sales_Plan__c/fields/Renewal_Quota__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Quota__c</fullName>
    <description>INC0122191 Label change</description>
    <inlineHelpText>Secondary Quota</inlineHelpText>
    <label>DEPRECATED - Renewal Quota</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>