objects/Sales_Plan__c/fields/Sales_Ops_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ops_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in Xactly/SFDC integration.</description>
    <label>Sales Ops Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>