objects/Sales_Plan__c/fields/Sales_Plan_18ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Plan_18ID__c</fullName>
    <description>INC0132703 Duyen 2021-04-14 Found records with duplicate 15-digit ids</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>18-digit record id</inlineHelpText>
    <label>Sales Plan 18ID</label>
    <type>Text</type>
</CustomField>