objects/Sales_Plan__c/fields/Sales_User_Text__c.field-meta.xml
<CustomField>
    <fullName>Sales_User_Text__c</fullName>
    <description>Makes the sales user searchable in list views. Populated by the Sales Plan - Before Insert - Fast Field Updates flow</description>
    <label>Sales User (Text)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>