objects/Sales_Plan__c/fields/Secondary_Territory__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Territory__c</fullName>
    <label>Secondary Territory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>