objects/Sales_Plan__c/fields/Stop_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Stop_Start_Date__c</fullName>
    <description>Used for Xactly/SFDC integration.</description>
    <label>Stop/Start Date</label>
    <type>Date</type>
</CustomField>