objects/Sales_Plan__c/fields/Territory_Account_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Territory_Account_Assignment__c</fullName>
    <label>Territory / Account Assignment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>