objects/Sales_Plan__c/fields/Total_OTV_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_OTV_Effective_Date__c</fullName>
    <description>Used for Xactly/SFDC integration. Populated by Boomi from SuccessFactor.</description>
    <inlineHelpText>This field is populated from SuccessFactor by Boomi. This is not a user updated field.</inlineHelpText>
    <label>Total OTV Effective Date</label>
    <type>Date</type>
</CustomField>