objects/Sales_Plan__c/fields/Version_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Version_Effective_Date__c</fullName>
    <description>Populated by Sales Ops.
Used in Xactly/SFDC integration.</description>
    <label>Version Effective Date</label>
    <type>Date</type>
</CustomField>