objects/Sales_Plan__c/fields/Work_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Work_Location_ID__c</fullName>
    <description>INC0121527 Alexis Nazario</description>
    <inlineHelpText>This field is populated from SuccessFactor by Boomi. This is not a user updated field.</inlineHelpText>
    <label>Work Location ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>