objects/Sales_Plan__c/validationRules/Prevent_Users_Editing_Ramp_Requirements.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Users_Editing_Ramp_Requirements</fullName>
    <active>true</active>
    <description>SS-12516: Only RVP, AVP, Kareena, Tim can update the checkboxes and they can only update checkboxes</description>
    <errorConditionFormula>AND(AND(NOT($Permission.Sales_Plan_Admin),
NOT($User.Id = Sales_User__r.Manager.Id),   
NOT($User.Id = Sales_User__r.Area_VP__r.Id)),
OR(ISCHANGED(Month_1_Ramp_Requirements_Met__c),
ISCHANGED(Month_2_Ramp_Requirements_Met__c),
ISCHANGED(Month_3_Ramp_Requirements_Met__c)),
NOT($Permission.DisableValidationRules))</errorConditionFormula>
    <errorMessage>Please create a ServiceNow ticket to edit Ramp Requirements Met fields.</errorMessage>
</ValidationRule>