objects/Sales_Plan__c/validationRules/Require_Stop_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Stop_Start_Date</fullName>
    <active>true</active>
    <description>Require Stop/Start date when Type = Stop/Start</description>
    <errorConditionFormula>ISPICKVAL(Type__c, &apos;Stop/Start&apos;) &amp;&amp; ISBLANK(Stop_Start_Date__c)</errorConditionFormula>
    <errorDisplayField>Stop_Start_Date__c</errorDisplayField>
    <errorMessage>Stop/Start Date required.</errorMessage>
</ValidationRule>