objects/Sales_Plan__c/validationRules/Sales_Ops_Owner_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Ops_Owner_is_Required</fullName>
    <active>true</active>
    <description>INC0167242: The field flows into Xactly and would allow us to track who in Sales Ops is managing the comp plans within Xactly people records. Requested by Timothy Noonan from the Accounting department.
INC0170323: Allow Boomi to create records.</description>
    <errorConditionFormula>ISBLANK( Sales_Ops_Owner__c ) &amp;&amp; $Profile.Id &lt;&gt; &apos;00e320000016C0i&apos;</errorConditionFormula>
    <errorDisplayField>Sales_Ops_Owner__c</errorDisplayField>
    <errorMessage>Sales Ops Owner is required!</errorMessage>
</ValidationRule>