objects/Sales_Plan__c/listViews/Active_Sales_Plans.listView-meta.xml
<ListView>
    <fullName>Active_Sales_Plans</fullName>
    <columns>NAME</columns>
    <columns>Plan_Effective_Date__c</columns>
    <columns>Sales_User__c</columns>
    <columns>Ready_to_Submit__c</columns>
    <columns>OTV_1__c</columns>
    <columns>Latest_Version_Date__c</columns>
    <columns>Latest_Processed_Date__c</columns>
    <columns>Plan_Type__c</columns>
    <columns>Sales_Ops_Owner__c</columns>
    <columns>Total_OTV_Effective_Date__c</columns>
    <columns>Region__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Plan_Effective_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>2/1/2026</value>
    </filters>
    <label>Active Sales Plans</label>
</ListView>